--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -6,10 +6,12 @@
 {% load mptt_tags %}
 {% load embed_video_tags %}
 {% load compress %}
+{% load group_utils %}
+{% load static %}
 {% block extra-css %}
     {% compress css%}
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/comentarios.css">
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/publication_detail.css">
+        <link rel="stylesheet" type="text/css" href="{% static "css/comentarios.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "css/publication_detail.css" %}">
     {% endcompress %}
 {% endblock %}
 {% block title %} <title> Skyfolk - Publicacion #{{ publication_id }}</title> {% endblock %}
@@ -141,7 +143,7 @@
                                                     <div class="card small">
                                                         <div class="card-image">
                                                             <img class="lazyload" data-src="
-                                                                    {% if node.shared_publication.extra_content.image %}{{ node.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                                    {% if node.shared_publication.extra_content.image %}{{ node.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                             <span class="card-title white-text">{{ node.shared_publication.extra_content.title }}</span>
                                                         </div>
                                                         <div class="card-content">
@@ -202,7 +204,7 @@
                                                         {% else %}
                                                         <div class="card small">
                                                             <div class="card-image">
-                                                                <img class="lazyload" data-src="{% if node.shared_photo_publication.publication_photo_extra_content.image %}{{ node.shared_photo_publication.publication_photo_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                                <img class="lazyload" data-src="{% if node.shared_photo_publication.publication_photo_extra_content.image %}{{ node.shared_photo_publication.publication_photo_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                                 <span class="card-title white-text">{{ node.shared_photo_publication.publication_photo_extra_content.title }}</span>
                                                             </div>
                                                             <div class="card-content">
@@ -272,7 +274,7 @@
                                                         {% else %}
                                                         <div class="card small">
                                                             <div class="card-image">
-                                                                <img class="lazyload" data-src="{% if node.shared_group_publication.extra_content.image %}{{ node.shared_group_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                                <img class="lazyload" data-src="{% if node.shared_group_publication.extra_content.image %}{{ node.shared_group_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                                 <span class="card-title white-text">{{ node.shared_group_publication.extra_content.title }}</span>
                                                             </div>
                                                             <div class="card-content">
@@ -326,7 +328,7 @@
                                         <div class="card small">
                                             <div class="card-image">
                                                 <img class="lazyload" data-src="
-                                                        {% if node.extra_content.image %}{{ node.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                        {% if node.extra_content.image %}{{ node.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                 <span class="card-title white-text">{{ node.extra_content.title }}</span>
                                             </div>
                                             <div class="card-content">
@@ -350,18 +352,16 @@
                                         </li>
                                     {% endif %}
                                         {% comment %} Si el usuario esta logueado {% endcomment %}
-                                        {% with node.user_give_me_hate.all as hates %}
-                                        <li title="No me gusta" class="hate-comment" {% if user in hates %} style="color: rgb(186, 104, 200);"{% endif %}>
-                                            <i class="material-icons md-18">keyboard_arrow_down</i>
-                                            <i class="hate-value">{% if hates|length > 0 %} {{ hates|length|intword }}{% endif %}</i>
+                                         <li title="No me gusta" class="hate-comment" {% if node.have_hate %}
+                                            style="color: rgb(186, 104, 200);"{% endif %}>
+                                        <i class="material-icons md-18">keyboard_arrow_down</i>
+                                        <i class="hate-value">{{ node.hates|zero_to_empty }}</i>
                                         </li>
-                                        {% endwith %}
-                                        {% with node.user_give_me_like.all as likes %}
-                                        <li title="¡Me gusta!" class="like-comment" {% if user in likes %}style="color: rgb(240, 98, 146);"{% endif %}>
-                                            <i class="material-icons md-18">keyboard_arrow_up</i>
-                                            <i class="like-value">{% if likes|length > 0 %} {{ likes|length|intword }}{% endif %}</i>
+                                        <li title="¡Me gusta!" class="like-comment"
+                                            {% if node.have_like %}style="color: rgb(240, 98, 146);"{% endif %}>
+                                        <i class="material-icons md-18">keyboard_arrow_up</i>
+                                        <i class="like-value">{{ node.likes|zero_to_empty }}</i>
                                         </li>
-                                        {% endwith %}
                                         <li id="share-{{node.pk}}" data-id="{{ node.pk }}" class={% if node.id in pubs_shared_with_me %}"remove-timeline" title="Eliminar de mi skyline" {% else %}"add-timeline" title="Añadir a mi skyline" {% endif %}
                                         >
                                         <i class="material-icons md-18">format_quote</i>
@@ -421,8 +421,8 @@
         <div class="indeterminate blue darken-1"></div>
     </div>
     </div>
-    <script src="{{ STATIC_URL }}js/publication_detail.js" type="text/javascript"></script> 
-    <script src="{{ STATIC_URL }}js/socket_publication.js"></script>
+    <script src="{% static "js/publication_detail.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/socket_publication.js" %}"></script>
     <script>
     UTILS.init([{{ user.pk }}]);
     UTILS.conn_socket();
