--- a/skyfolk/templates/account/relations_page.html
+++ b/skyfolk/templates/account/relations_page.html
@@ -1,5 +1,6 @@
 {% load app_filters %}
 {% load avatar_tags %}
+{% load static %}
 {% for item in friends_top4 %}
     <div class="col l3 m10 s12 offset-m1">
         <div class="personal-card">
@@ -9,10 +10,9 @@
                         {% if item.profile.back_image %}
                             <img class="back-profile-user lazyload" data-src="{{ item.profile.back_image.url }}">
                         {% else %}
-                            <img class="back-profile-user lazyload" data-src="{{ STATIC_URL }}img/nuevo_back.png">
+                            <img class="back-profile-user lazyload" data-src="{% static "img/nuevo_back.png" %}">
                         {% endif %}
                         <i class="material-icons like-him">person</i>
-                        </i>
                         <div class="bg-user">
                             <div onclick="location.href='/profile/{{ item.username }}'"
                                  class="profile-user-bg">{% avatar item.username %}</div>
