--- a/photologue/templates/photologue/publication_detail.html
+++ b/photologue/templates/photologue/publication_detail.html
@@ -6,6 +6,7 @@
 {% load mptt_tags %}
 {% load embed_video_tags %}
 {% load compress %}
+{% load group_utils %}
 {% block extra-css %}
 
     {% compress css%}
@@ -165,20 +166,14 @@
                                             </li>
                                         {% endif %}
                                             {% comment %} Si el usuario esta logueado {% endcomment %}
-                                        {% with node.user_give_me_hate.all as hates %}
-                                            <li title="No me gusta" class="hate-comment" 
-                                                {% if user in hates %}style="color: rgb(186, 104, 200);"{% endif %}>
-                                                <i class="material-icons md-18">keyboard_arrow_down</i>
-                                                <i class="hate-value">{% if hates|length > 0 %} {{ hates|length|intword }}{% endif %}</i>
-                                            </li>
-                                        {% endwith %}
-                                        {% with node.user_give_me_like.all as likes %}
-                                            <li title="¡Me gusta!" class="like-comment"
-                                                {% if user in likes %}style="color: rgb(240, 98, 146);"{% endif %}>
-                                                <i class="material-icons md-18">keyboard_arrow_up</i>
-                                                <i class="like-value">{% if likes|length > 0 %} {{ likes|length|intword }}{% endif %}</i>
-                                            </li>
-                                        {% endwith %} 
+                                        <li title="No me gusta" class="hate-comment"{% if node.have_hate %} style="color: rgb(186, 104, 200);"{% endif %}>
+                                            <i class="material-icons md-18">keyboard_arrow_down</i>
+                                            <i class="hate-value">{{ node.hates|zero_to_empty }}</i>
+                                        </li>
+                                        <li title="¡Me gusta!" class="like-comment" {% if node.have_like %}style="color: rgb(240, 98, 146);"{% endif %}>
+                                            <i class="material-icons md-18">keyboard_arrow_up</i>
+                                            <i class="like-value">{{ node.likes|zero_to_empty }}</i>
+                                        </li>
                                         <li title="Añadir a mi skyline" id="share-{{node.id}}" data-id="{{ node.pk }}" class={% if node.id in pubs_shared_with_me %}"remove-timeline"{% else %}"add-timeline"{% endif %}><i class="material-icons md-18">format_quote</i><i class="share-values"> {{ pubs_shared|lookup:node.id|intword }}</i></li>
                                         <li title="Responder" class="reply-comment" id="reply-caja-comentario-{{ node.pk }}"><i class="material-icons md-18">reply</i>
                                         </li>
