--- a/skyfolk/templates/about/publications.html
+++ b/skyfolk/templates/about/publications.html
@@ -1,11 +1,12 @@
 {% extends "about/base_about.html" %}
+{% load static %}
 {% block content %}
     <div id="blog-publications" class="container">
         {% include "about/entry_list_page.html" %}
     </div>
     {% block js %}
         {{ block.super }}
-        <script src="{{ STATIC_URL }}js/el-pagination.js"></script>
+        <script src="{% static "js/el-pagination.js" %}"></script>
         <script>
             $.endlessPaginate({
                 paginateOnScroll: true,
