--- a/skyfolk/templates/account/account/password_reset.html
+++ b/skyfolk/templates/account/account/password_reset.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 {% load account %}
-{% load url from future %}
+{% laod static %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
@@ -22,7 +22,7 @@
         <br><br>
         <p class="contacto-password">{% blocktrans %}Please contact us if you have any trouble resetting your
             password.{% endblocktrans %}</p>
-        <img class="need-help" src="{{ STATIC_URL }}img/help.svg"
+        <img class="need-help" src="{% static "img/help.svg" %}"
              onclick="location.href='{% url 'support:support-password' %}'" title="Necesito ayuda"
              alt="Necesito ayuda"/>
     </div>
