--- a/skyfolk/templates/account/ajax_load_replies.html
+++ b/skyfolk/templates/account/ajax_load_replies.html
@@ -3,6 +3,9 @@
 {% load app_filters %}
 {% load humanize %}
 {% load embed_video_tags %}
+{% load group_utils %}
+{% load static %}
+
     <input type="hidden" value="{{ publications|length }}" class="childs_for_{{ pub_id }}">
     {% if publications.has_next %}
         <input type="hidden" value="{{ publications.next_page_number }}" class="page_for_{{ pub_id }}">
@@ -101,7 +104,7 @@
                                                         {% else %}
                                                         <div class="card small">
                                                             <div class="card-image">
-                                                                <img class="lazyload" data-src="{% if node.shared_publication.extra_content.image %}{{ node.shared_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                                <img class="lazyload" data-src="{% if node.shared_publication.extra_content.image %}{{ node.shared_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                                 <span class="card-title white-text">{{ node.shared_publication.extra_content.title }}</span>
                                                             </div>
                                                             <div class="card-content">
@@ -172,7 +175,7 @@
                                                         {% else %}
                                                         <div class="card small">
                                                             <div class="card-image">
-                                                                <img class="lazyload" data-src="{% if node.shared_photo_publication.extra_content.image %}{{ node.shared_photo_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                                <img class="lazyload" data-src="{% if node.shared_photo_publication.extra_content.image %}{{ node.shared_photo_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                                 <span class="card-title white-text">{{ node.shared_photo_publication.extra_content.title }}</span>
                                                             </div>
                                                             <div class="card-content">
@@ -225,7 +228,7 @@
                                             {% comment %} Para publicaciones con URL {% endcomment %}
                                             <div class="card small">
                                                 <div class="card-image">
-                                                    <img class="lazyload" data-src="{% if node.extra_content.image %}{{ node.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                    <img class="lazyload" data-src="{% if node.extra_content.image %}{{ node.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                     <span class="card-title white-text">{{ node.extra_content.title }}</span>
                                                 </div>
                                                 <div class="card-content">
@@ -252,18 +255,16 @@
                                         </li>
                                     {% endif %}
                                         {% comment %} Si el usuario esta logueado {% endcomment %}
-                                        {% with node.user_give_me_hate.all as hates %}
-                                        <li title="No me gusta" class="hate-comment" {% if user in hates %} style="color: rgb(186, 104, 200);"{% endif %}>
-                                            <i class="material-icons md-18">keyboard_arrow_down</i>
-                                            <i class="hate-value">{% if hates|length > 0 %} {{ hates|length|intword }}{% endif %}</i>
-                                        </li>
-                                        {% endwith %}
-                                        {% with node.user_give_me_like.all as likes %}
-                                        <li title="¡Me gusta!" class="like-comment" {% if user in likes %}style="color: rgb(240, 98, 146);"{% endif %}>
-                                            <i class="material-icons md-18">keyboard_arrow_up</i>
-                                            <i class="like-value">{% if likes|length > 0 %} {{ likes|length|intword }}{% endif %}</i>
-                                        </li>
-                                        {% endwith %}
+                                         <li title="No me gusta" class="hate-comment" {% if node.have_hate %}
+                                            style="color: rgb(186, 104, 200);"{% endif %}>
+                                        <i class="material-icons md-18">keyboard_arrow_down</i>
+                                        <i class="hate-value">{{ node.hates|zero_to_empty }}</i>
+                                    </li>
+                                    <li title="¡Me gusta!" class="like-comment"
+                                            {% if node.have_like %}style="color: rgb(240, 98, 146);"{% endif %}>
+                                        <i class="material-icons md-18">keyboard_arrow_up</i>
+                                        <i class="like-value">{{ node.likes|zero_to_empty }}</i>
+                                    </li>
                                         <li id="share-{{node.pk}}" data-id="{{ node.pk }}" class={% if node.id in pubs_shared_with_me %}"remove-timeline" title="Eliminar de mi skyline" {% else %}"add-timeline" title="Añadir a mi skyline" {% endif %}
                                         >
                                         <i class="material-icons md-18">format_quote</i>
