--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -12,17 +12,17 @@ Base para la interfaz en comun de todos los usuarios.
     <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
     <meta content="text/html; charset=UTF-8"/>
     {% compress css %}
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/core.css">
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/materialize.min.css">
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/buscar.css">
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}fonts/iconfont/material-icons.css">
-    <link href="{{ STATIC_URL }}tellme/feedback.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static "css/core.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "css/materialize.min.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "css/buscar.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "fonts/iconfont/material-icons.css" %}">
+    <link href="{% static "tellme/feedback.min.css" %}" rel="stylesheet">
     
     {% endcompress %}
-    <link rel="icon" type="image/ico" href="{{ STATIC_URL }}img/favicon.ico"/>
+    <link rel="icon" type="image/ico" href="{% static "img/favicon.ico" %}"/>
     {% compress js %}
-    <script src="{{ STATIC_URL }}js/jquery-3.1.0.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
+    <script src="{% static "js/jquery-3.1.0.min.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/jquery-migrate-1.4.1.min.js" %}" type="text/javascript"></script>
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -38,11 +38,11 @@ Base para la interfaz en comun de todos los usuarios.
         ga('create', 'UA-72424818-2', 'auto');
         ga('send', 'pageview');
     </script>
-    <script src="{{ STATIC_URL }}js/lazysizes.min.js" async=""></script>
-    <script src="{{ STATIC_URL}}js/jquery.waypoints.min.js"></script>
-    <script src="{{ STATIC_URL}}js/infinite.min.js"></script>
-    <script src="{{ STATIC_URL }}js/masonry.pkgd.min.js"></script>
-    <script src="{{ STATIC_URL }}js/imagesloaded.pkgd.min.js"></script> 
+    <script src="{% static "js/lazysizes.min.js" %}" async=""></script>
+    <script src="{% static "js/jquery.waypoints.min.js" %}"></script>
+    <script src="{% static "js/infinite.min.js" %}"></script>
+    <script src="{% static "js/masonry.pkgd.min.js" %}"></script>
+    <script src="{% static "js/imagesloaded.pkgd.min.js" %}"></script>
     {% endcompress %}
     {% block title %} <title>Skyfolk - Bienvenido.</title> {% endblock %}
     {% block extra-js %}{% endblock %}
@@ -339,7 +339,7 @@ Menu para versiones tablet/movil
 {% include "account/mobile-menu.html" %}
 {% block footer %}
 {% compress js %}
-<script src="{{ STATIC_URL }}emoji/js/textarea_find_emoji.js" type="text/javascript"></script>
+<script src="{% static "emoji/js/textarea_find_emoji.js" %}" type="text/javascript"></script>
 {% endcompress %}
 {% endblock %}
 </body>
