--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -1,20 +1,21 @@
 {% comment %} Template base para el login/registro {% endcomment %}
 {% load compress %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="es" style="background-color: white;">
 
 <head>
     <!-- Hojas de estilo SASS -->
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" author="Skyfolk"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>¡Bienvenido a Skyfolk! - Iniciar sesión (pre)</title>
     <meta name="keywords" content="skyfolk, social, login, registro, sky, folk, red social, red">
-    <link rel="shortcut icon" href="{{ STATIC_URL }}img/favicon.ico">
+    <link rel="shortcut icon" href="{% static "img/favicon.ico" %}">
     {% compress css %}
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css">
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/login-signup.css">
-        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/materialize.min.css" media="screen,projection">
+        <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "css/login-signup.css" %}">
+        <link type="text/css" rel="stylesheet" href="{% static "css/materialize.min.css" %}" media="screen,projection">
         <style>
             .progress {
                 margin: 0 !important;
@@ -22,8 +23,8 @@
         </style>
     {% endcompress %}
     {% compress js %}
-        <script src="{{ STATIC_URL }}js/jquery-3.1.0.min.js" type="text/javascript"></script>
-        <script src="{{ STATIC_URL }}js/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
+        <script src="{% static "js/jquery-3.1.0.min.js" %}" type="text/javascript"></script>
+        <script src="{% static "js/jquery-migrate-1.4.1.min.js" %}" type="text/javascript"></script>
         <script>
             $(window).load(function () {
                 $('.progress').fadeOut();
@@ -44,13 +45,13 @@
             ga('create', 'UA-72424818-2', 'auto');
             ga('send', 'pageview');
         </script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/materialize.min.js"></script>
+        <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
     {% endcompress %}
     {% block extra_head %} {% endblock %}
 </head>
 
 <body>
-<img class="active-img" src="{{ STATIC_URL }}dist/img/backgrounds/back.jpg" alt="background">
+<img class="active-img" src="{% static "dist/img/backgrounds/back.jpg" %}" alt="background">
 <header>
     {% comment "loader" %} Desaparece cuando la pagina este lista... {% endcomment %}
     <div class="progress">
@@ -66,7 +67,7 @@
     <div class="hide-on-med-and-down namesn">
         <div onclick="javascript:location.href='/'" class="logo">
             <h5><i>S</i>kyfolk.</h5>
-            <img src="{{ STATIC_URL }}dist/img/logo.png">
+            <img src="{% static "dist/img/logo.png" %}">
         </div>
     </div>
 </div>
