--- a/skyfolk/templates/account/menu-vertical.html
+++ b/skyfolk/templates/account/menu-vertical.html
@@ -3,14 +3,14 @@
 {% endcomment %}
 {% load avatar_tags %}
 {% load app_filters %}
-
+{% load static %}
 <ul id="vertical-menu" class="side-nav">
     <li>
         <div class="userView">
             {% if request.user.profile.back_image %}
                 <img class="background" src="{{ request.user.profile.back_image.url }}">
             {% else %}
-                <img class="background" src="{{ STATIC_URL }}dist/img/nuevo_back.png">
+                <img class="background" src="{% static "dist/img/nuevo_back.png" %}">
             {% endif %}
             <a href="/profile/{{ request.user }}">{% avatar user %}</a>
             <a href="/profile/{{ request.user }}"><span class="white-text name">{{ request.user.username }}</span></a>
