--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -4,9 +4,10 @@ Menu de notificaciones verticales
 {% load humanize %}
 {% load avatar_tags %}
 {% load compress %}
+{% load static %}
 {% compress js %}
-<script src="{{ STATIC_URL }}js/reconnecting-websocket.min.js"></script>
-<script src="{{ STATIC_URL }}js/socket_notifications.js" type="text/javascript"></script>
+<script src="{% static "js/reconnecting-websocket.min.js" %}"></script>
+<script src="{% static "js/socket_notifications.js" %}" type="text/javascript"></script>
 {% endcompress %}
 <script>
     UTILS_N.init([{{ user.pk }}]);
