--- a/skyfolk/templates/account/nuevosusuarios.html
+++ b/skyfolk/templates/account/nuevosusuarios.html
@@ -1,4 +1,5 @@
 ﻿{% load compress %}
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,11 +8,11 @@
     {% endblock %}
     <meta charset="utf-8"/>
     {% compress css %}
-        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/materialize.css" media="screen,projection"/>
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/welcome.css"/>
-        <link rel="stylesheet" href="{{ STATIC_URL }}themes/google/google.css">
-        <link rel="stylesheet" href="{{ STATIC_URL }}dist/sweetalert.css">
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}fonts/iconfont/material-icons.css">
+        <link type="text/css" rel="stylesheet" href="{% static "css/materialize.css" %}" media="screen,projection"/>
+        <link rel="stylesheet" type="text/css" href="{% static "css/welcome.css" %}"/>
+        <link rel="stylesheet" href="{% static "themes/google/google.css" %}">
+        <link rel="stylesheet" href="{% static "dist/sweetalert.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "fonts/iconfont/material-icons.css" %}">
     {% endcompress %}
     <style>
         .default-div {
@@ -21,16 +22,16 @@
         }
     </style>
     {% compress js %}
-        <script src="{{ STATIC_URL }}js/jquery-3.1.0.min.js" type="text/javascript"></script>
-        <script src="{{ STATIC_URL }}js/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
-        <script src="{{ STATIC_URL }}js/materialize.js" type="text/javascript"></script>
-        <script src="{{ STATIC_URL }}js/welcome.js"></script>
-        <script src="{{ STATIC_URL }}dist/sweetalert.min.js" type="text/javascript"></script>
+        <script src="{% static "js/jquery-3.1.0.min.js" %}" type="text/javascript"></script>
+        <script src="{% static "js/jquery-migrate-1.4.1.min.js" %}" type="text/javascript"></script>
+        <script src="{% static "js/materialize.js" %}" type="text/javascript"></script>
+        <script src="{% static "js/welcome.js" %}"></script>
+        <script src="{% static "dist/sweetalert.min.js" %}" type="text/javascript"></script>
     {% endcompress %}
 </head>
 
 
-<body style="background-image: url({{ STATIC_URL }}img/backgrounds/back.jpg); background-repeat: no-repeat; background-position: center; background-size: cover; background-attachment: fixed;">
+<body style="background-image: url('{% static "img/backgrounds/back.jpg" %}'); background-repeat: no-repeat; background-position: center; background-size: cover; background-attachment: fixed;">
 <div class="container">
     {% block content %}
         <div class="row">
