--- a/skyfolk/templates/account/password_reset.html
+++ b/skyfolk/templates/account/password_reset.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 {% load account %}
-
+{% load static %}
 {% block head_title %}Skyfolk - {% trans "Password Reset" %}{% endblock %}
 
 {% block base-title %}
@@ -35,7 +35,7 @@
         <div class="row">
             <p class="contacto-password">{% blocktrans %}Please contact us if you have any trouble resetting your
                 password.{% endblocktrans %}</p>
-            <img class="need-help" src="{{ STATIC_URL }}img/help.svg"
+            <img class="need-help" src="{% static "img/help.svg" %}"
                  onclick="location.href='{% url 'support:support-password' %}'" title="Necesito ayuda"
                  alt="Necesito ayuda"/>
         </div>
