--- a/skyfolk/templates/account/pin-left-top.html
+++ b/skyfolk/templates/account/pin-left-top.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% comment %}
   Pin izquierda arriba
 {% endcomment %}
@@ -11,7 +12,7 @@
         <div class="wrapper">
             <div class="widget-wr">
                 <div class="widget-wr-ans">
-                    <img src="{{ STATIC_URL }}img/1.jpg">
+                    <img src="{% static  "img/1.jpg" %}">
                     <span class="wr-tittle">¿Debería viajar aquí?</span>
                 </div>
                 <div class="widget-options">
