--- a/skyfolk/templates/account/privacity/block_profile.html
+++ b/skyfolk/templates/account/privacity/block_profile.html
@@ -4,6 +4,7 @@
 {% endcomment %}
 {% load app_filters %}
 {% load avatar_tags %}
+{% load static %}
 {% block title %} <title> Perfil de {{ user_profile.username }}</title> {% endblock %}
 {% block include_files %}
     <style type="text/css">
@@ -35,8 +36,8 @@
 {% endblock %}
 
 {% block extra-css %}
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/profile.css" onload="if(media!='all')media='all'">
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/comentarios.css"
+    <link rel="stylesheet" href="{% static "css/profile.css" %}" onload="if(media!='all')media='all'">
+    <link rel="stylesheet" type="text/css" href="{% static "css/comentarios.css" %}"
           onload="if(media!='all')media='all'">
     {% if liked == True %}
         <style type="text/css">
@@ -48,7 +49,7 @@
 {% endblock %}
 
 {% block content %}
-    <script async src="{{ STATIC_URL }}js/profile.js" type="text/javascript"></script>
+    <script async src="{% static "js/profile.js" %}" type="text/javascript"></script>
 
     <div class="container">
         {% if user_profile.is_active %}
