--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -5,14 +5,15 @@ Template para el perfil de cada usuario
 {% load app_filters %}
 {% load avatar_tags %}
 {% load compress %}
+{% load static %}
 {% block title %} <title> Perfil de {{ user_profile.username }}</title> {% endblock %}
 {% block include_files %}
 {% endblock %}
 
 {% block extra-css %}
     {% compress css %}
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/comentarios.css">
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/profile.css">
+        <link rel="stylesheet" type="text/css" href="{% static "css/comentarios.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "css/profile.css" %}">
         <style>
             .card-content img {
                 max-width: 100%;
@@ -32,9 +33,9 @@ Template para el perfil de cada usuario
 
 {% block content %}
     {% compress js %}
-        <script src="{{ STATIC_URL }}js/profile.js" type="text/javascript"></script>
-        <script src="{{ STATIC_URL }}js/jquery.easytabs.js" type="text/javascript"></script>
-        <script src="{{ STATIC_URL }}js/jquery.hashchange.min.js" type="text/javascript"></script>
+        <script src="{% static "js/profile.js" %}" type="text/javascript"></script>
+        <script src="{% static "js/jquery.easytabs.js" %}" type="text/javascript"></script>
+        <script src="{% static "js/jquery.hashchange.min.js" %}" type="text/javascript"></script>
     {% endcompress %}
     <div class="container">
         {% if user_profile.is_active %}
@@ -125,7 +126,7 @@ Template para el perfil de cada usuario
                                             <script>
                                                 window.board_owner = {{ user_profile.id }};
                                             </script>
-                                            <script src="{{ STATIC_URL }}js/{{ component }}"></script>
+                                            <script src="{% static "js/{{ component }}" %}"></script>
                                         </div>
                                         {% if publications|length == 0 %}
                                             <div class="no-comments" id="without-comments">
@@ -195,7 +196,7 @@ Template para el perfil de cada usuario
                         $('#menu-hr').find('li:nth-child(1)').css('background-color', 'rgba(0,0,0,0.1)');
                     </script>
                 {% endif %}
-                <script src="{{ STATIC_URL }}js/socket.js"></script>
+                <script src="{% static "js/socket.js" %}"></script>
                 <script>
                     UTILS.init([{{ user.pk }}]);
                     UTILS.conn_socket();
