--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -3,6 +3,8 @@
 {% load app_filters %}
 {% load humanize %}
 {% load embed_video_tags %}
+{% load group_utils %}
+{% load static %}
 <div id="list-publications" class="infinite-container">
     {% for node in publications %}
         <div class="row infinite-item wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
@@ -100,7 +102,7 @@
                                                                 <div class="card small">
                                                                     <div class="card-image">
                                                                         <img class="lazyload" data-src="
-                                                                                {% if node.shared_publication.extra_content.image %}{{ node.shared_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                                                {% if node.shared_publication.extra_content.image %}{{ node.shared_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                                         <span class="card-title white-text">{{ node.shared_publication.extra_content.title }}</span>
                                                                     </div>
                                                                     <div class="card-content">
@@ -177,7 +179,7 @@
                                                                 <div class="card small">
                                                                     <div class="card-image">
                                                                         <img class="lazyload" data-src="
-                                                                                {% if node.shared_photo_publication.publication_photo_extra_content.image %}{{ node.shared_photo_publication.publication_photo_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                                                {% if node.shared_photo_publication.publication_photo_extra_content.image %}{{ node.shared_photo_publication.publication_photo_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                                         <span class="card-title white-text">{{ node.shared_photo_publication.publication_photo_extra_content.title }}</span>
                                                                     </div>
                                                                     <div class="card-content">
@@ -255,7 +257,7 @@
                                                                 <div class="card small">
                                                                     <div class="card-image">
                                                                         <img class="lazyload" data-src="
-                                                                                {% if node.shared_group_publication.extra_content.image %}{{ node.shared_group_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                                                {% if node.shared_group_publication.extra_content.image %}{{ node.shared_group_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                                         <span class="card-title white-text">{{ node.shared_group_publication.extra_content.title }}</span>
                                                                     </div>
                                                                     <div class="card-content">
@@ -312,7 +314,7 @@
                                                 <div class="card small">
                                                     <div class="card-image">
                                                         <img class="lazyload" data-src="
-                                                                {% if node.extra_content.image %}{{ node.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                                {% if node.extra_content.image %}{{ node.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                         <span class="card-title white-text">{{ node.extra_content.title }}</span>
                                                     </div>
                                                     <div class="card-content">
@@ -340,22 +342,16 @@
                                         </li>
                                     {% endif %}
                                     {% comment %} Si el usuario esta logueado {% endcomment %}
-                                    {% with node.user_give_me_hate.all as hates %}
-                                        <li title="No me gusta" class="hate-comment" {% if user in hates %}
+                                    <li title="No me gusta" class="hate-comment" {% if node.have_hate %}
                                             style="color: rgb(186, 104, 200);"{% endif %}>
-                                            <i class="material-icons md-18">keyboard_arrow_down</i>
-                                            <i class="hate-value">{% if hates|length > 0 %}
-                                                {{ hates|length|intword }}{% endif %}</i>
-                                        </li>
-                                    {% endwith %}
-                                    {% with node.user_give_me_like.all as likes %}
-                                        <li title="¡Me gusta!" class="like-comment"
-                                            {% if user in likes %}style="color: rgb(240, 98, 146);"{% endif %}>
-                                            <i class="material-icons md-18">keyboard_arrow_up</i>
-                                            <i class="like-value">{% if likes|length > 0 %}
-                                                {{ likes|length|intword }}{% endif %}</i>
-                                        </li>
-                                    {% endwith %}
+                                        <i class="material-icons md-18">keyboard_arrow_down</i>
+                                        <i class="hate-value">{{ node.hates|zero_to_empty }}</i>
+                                    </li>
+                                    <li title="¡Me gusta!" class="like-comment"
+                                            {% if node.have_like %}style="color: rgb(240, 98, 146);"{% endif %}>
+                                        <i class="material-icons md-18">keyboard_arrow_up</i>
+                                        <i class="like-value">{{ node.likes|zero_to_empty }}</i>
+                                    </li>
                                     <li id="share-{{ node.pk }}" data-id="{{ node.pk }}"
                                         class={% if node.id in pubs_shared_with_me %}"remove-timeline"
                                         title="Eliminar de mi skyline" {% else %}"add-timeline" title="Añadir a mi
