--- a/skyfolk/templates/channels/new_feed_publication.html
+++ b/skyfolk/templates/channels/new_feed_publication.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 {% load embed_video_tags %}
 {% load app_filters %}
-
+{% load static %}
 <div data-id="{{ item.id }}" class="grid-item infinite-item">
     <div class="notice-item">
         <div class="col l3 m2 s3 img">
@@ -66,7 +66,7 @@
                                 {% else %}
                                 <div class="card small">
                                     <div class="card-image">
-                                        <img class="lazyload" data-src="{% if item.shared_publication.extra_content.image %}{{ item.shared_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                        <img class="lazyload" data-src="{% if item.shared_publication.extra_content.image %}{{ item.shared_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                         <span class="card-title white-text">{{ item.shared_publication.extra_content.title }}</span>
                                     </div>
                                     <div class="card-content">
@@ -137,7 +137,7 @@
                                         {% else %}
                                         <div class="card small">
                                             <div class="card-image">
-                                                <img class="lazyload" data-src="{% if item.shared_photo_publication.extra_content.image %}{{ item.shared_photo_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                <img class="lazyload" data-src="{% if item.shared_photo_publication.extra_content.image %}{{ item.shared_photo_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                 <span class="card-title white-text">{{ item.shared_photo_publication.extra_content.title }}</span>
                                             </div>
                                             <div class="card-content">
@@ -192,7 +192,7 @@
                                     {% comment %} Para publicaciones con URL {% endcomment %}
                                     <div class="card small">
                                         <div class="card-image">
-                                            <img class="lazyload" data-src="{% if item.extra_content.image %}{{ item.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                            <img class="lazyload" data-src="{% if item.extra_content.image %}{{ item.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                             <span class="card-title white-text">{{ item.extra_content.title }}</span>
                                         </div>
                                         <div class="card-content">
