--- a/skyfolk/templates/channels/new_group_publication.html
+++ b/skyfolk/templates/channels/new_group_publication.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 {% load embed_video_tags %}
 {% load app_filters %}
-
+{% load static %}
 <div class="row" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
     <div class="col s12">
         <div class="col s12 wrapper"
@@ -82,7 +82,7 @@
                                         <div class="card small">
                                             <div class="card-image">
                                                 <img class="lazyload" data-src="
-                                                        {% if node.group_extra_content.image %}{{ node.group_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                        {% if node.group_extra_content.image %}{{ node.group_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                 <span class="card-title white-text">{{ node.group_extra_content.title }}</span>
                                             </div>
                                             <div class="card-content">
