--- a/skyfolk/templates/channels/new_group_publication_detail.html
+++ b/skyfolk/templates/channels/new_group_publication_detail.html
@@ -4,6 +4,7 @@
 {% load humanize %}
 {% load mptt_tags %}
 {% load embed_video_tags %}
+{% load static %}
 {% load compress %}
             <div class="row row-pub infinite-item" id="pub-{{ node.id }}" data-id="{{ user.pk }}" {% if node.parent %}data-parent="{{ node.parent.id }}"{% endif %}>
                 <div class="col s12">
@@ -21,7 +22,7 @@
                                       data-tooltip="Editar comentario"><i class="material-icons">mode_edit</i></span>
                         {% endif %}
                             <div class="row">
-                                <div class="image col l2 m2 s2">
+                                <div class="image col l1 m2 s2">
                                     <div class="usr-img img-responsive">{% avatar node.author %}</div>
                                 </div>
                                 <div class="articulo col s9">
@@ -79,7 +80,7 @@
                                         <div class="card small">
                                             <div class="card-image">
                                                 <img class="lazyload" data-src="
-                                                        {% if node.group_extra_content.image %}{{ node.group_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                        {% if node.group_extra_content.image %}{{ node.group_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                 <span class="card-title white-text">{{ node.group_extra_content.title }}</span>
                                             </div>
                                             <div class="card-content">
