--- a/skyfolk/templates/channels/new_photo_publication.html
+++ b/skyfolk/templates/channels/new_photo_publication.html
@@ -3,7 +3,8 @@
 {% load app_filters %}
 {% load humanize %}
 {% load embed_video_tags %}
-<div class="row">
+{% load static %}
+<div class="row infinite-item">
     <div class="col s12">
         <div class="col s12 wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}"
         {% if node.level > 0 and node.level < 3 %}style="min-width: 98% !important;"{% endif %}>
@@ -78,7 +79,7 @@
                         {% comment %} Para publicaciones con URL {% endcomment %}
                         <div class="card small">
                             <div class="card-image">
-                                <img class="lazyload" data-src="{% if node.publication_photo_extra_content.image %}{{ node.publication_photo_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                <img class="lazyload" data-src="{% if node.publication_photo_extra_content.image %}{{ node.publication_photo_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                 <span class="card-title white-text">{{ node.publication_photo_extra_content.title }}</span>
                             </div>
                             <div class="card-content">
