--- a/skyfolk/templates/channels/new_publication.html
+++ b/skyfolk/templates/channels/new_publication.html
@@ -3,6 +3,7 @@
 {% load app_filters %}
 {% load humanize %}
 {% load embed_video_tags %}
+{% load static %}
 <div class="row infinite-item wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
     <div class="col s12">
         <div class="col s12"
@@ -98,7 +99,7 @@
                                        {% else %}
                                        <div class="card small">
                                         <div class="card-image">
-                                            <img class="lazyload" data-src="{% if node.shared_publication.extra_content.image %}{{ node.shared_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                            <img class="lazyload" data-src="{% if node.shared_publication.extra_content.image %}{{ node.shared_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                             <span class="card-title white-text">{{ node.shared_publication.extra_content.title }}</span>
                                         </div>
                                         <div class="card-content">
@@ -169,7 +170,7 @@
                                            {% else %}
                                            <div class="card small">
                                             <div class="card-image">
-                                                <img class="lazyload" data-src="{% if node.shared_photo_publication.extra_content.image %}{{ node.shared_photo_publication.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                <img class="lazyload" data-src="{% if node.shared_photo_publication.extra_content.image %}{{ node.shared_photo_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                                 <span class="card-title white-text">{{ node.shared_photo_publication.extra_content.title }}</span>
                                             </div>
                                             <div class="card-content">
@@ -222,7 +223,7 @@
                                 {% comment %} Para publicaciones con URL {% endcomment %}
                                 <div class="card small">
                                     <div class="card-image">
-                                        <img class="lazyload" data-src="{% if node.extra_content.image %}{{ node.extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                        <img class="lazyload" data-src="{% if node.extra_content.image %}{{ node.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                         <span class="card-title white-text">{{ node.extra_content.title }}</span>
                                     </div>
                                     <div class="card-content">
