--- a/skyfolk/templates/groups/followers_page.html
+++ b/skyfolk/templates/groups/followers_page.html
@@ -1,5 +1,6 @@
 {% load app_filters %}
 {% load avatar_tags %}
+{% load static %}
 {% if enable_kick_btn %}
 {% for item in user_list %}
 <div id="member-{{item.id}}" class="col l3 m10 s12 offset-m1">
@@ -10,7 +11,7 @@
                         {% if item.profile.back_image %}
                             <img class="back-profile-user" src="{{ item.profile.back_image.url }}">
                         {% else %}
-                            <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
+                            <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
                         {% endif %}
                         <i class="material-icons like-him">person</i>
                         <div class="bg-user">
@@ -46,7 +47,7 @@
                         {% if item.profile.back_image %}
                             <img class="back-profile-user" src="{{ item.profile.back_image.url }}">
                         {% else %}
-                            <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
+                            <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
                         {% endif %}
                         <i class="material-icons like-him">person</i>
                         <div class="bg-user">
