--- a/skyfolk/templates/groups/list_group_profile.html
+++ b/skyfolk/templates/groups/list_group_profile.html
@@ -1,5 +1,6 @@
 {% load humanize %}
 {% load app_filters %}
+{% load static %}
 <div class="row">
     <ul>
         {% for group in groups %}
@@ -11,7 +12,7 @@
                                 {% if group.avatar %}
                                     <img src="{{ group.avatar.url }}" width="48" height="48">
                                 {% else %}
-                                    <img src="{{ STATIC_URL }}img/ic_people_black_24dp_2x.png">
+                                    <img src="{% static "img/ic_people_black_24dp_2x.png" %}">
                                 {% endif %}
                             </div>
                             <div class="col s10"><br>
