--- a/skyfolk/templates/groups/user_list_page.html
+++ b/skyfolk/templates/groups/user_list_page.html
@@ -1,5 +1,6 @@
 {% load app_filters %}
 {% load avatar_tags %}
+{% load static %}
 {% for item in like_list %}
     <div class="col l3 m10 s12 offset-m1">
         <div class="personal-card">
@@ -10,7 +11,7 @@
                             <img class="back-profile-user"
                                  src="{{ MEDIA_URL }}{{ item.from_like__profile__back_image }}">
                         {% else %}
-                            <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
+                            <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
                         {% endif %}
                         <i class="material-icons like-him">favorite</i>
                         <div class="bg-user">
