--- a/skyfolk/templates/search/search.html
+++ b/skyfolk/templates/search/search.html
@@ -6,6 +6,7 @@ Template para las busquedas
 {% load avatar_tags %}
 {% load humanize %}
 {% load highlight %}
+{% load static %}
 {% block title %} <title>Skyfolk / Busqueda {{ q }}</title> {% endblock %}
 {% block include_files %}
 <!-- Estilos para la galeria de fotos -->
@@ -78,7 +79,7 @@ Template para las busquedas
                     {% if item.object.back_image %}
                     <img class="back-profile-user" src="{{ item.object.back_image.url }}">
                     {% else %}
-                    <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
+                    <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
                     {% endif %}
                     <i class="material-icons like-him">person</i>
                     <div class="bg-user">
@@ -160,7 +161,7 @@ Template para las busquedas
                     {% if item.object.back_image %}
                     <img class="back-profile-user" src="{{ item.object.back_image.url }}">
                     {% else %}
-                    <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
+                    <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
                     {% endif %}
                     <i class="material-icons like-him">person</i>
                     <div class="bg-user">
@@ -291,9 +292,8 @@ Template para las busquedas
     {% endif %}
     </div>
 </div>
-<script src="{{ STATIC_URL }}js/search.js"></script>
-<script src="{{ STATIC_URL }}js/photo_gallery.js" type="text/javascript"></script>
-<script src="{{ STATIC_URL }}js/masonry.pkgd.min.js"></script>
+<script src="{% static "js/search.js" %}"></script>
+<script src="{% static "js/photo_gallery.js" %}" type="text/javascript"></script>
         <script src="{{ STATIC_URL }}js/imagesloaded.pkgd.min.js"></script> 
         <script>
             var $grid = $('.grid').masonry({
